--- a/templates/clients/client_list.html
+++ b/templates/clients/client_list.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Clients</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Clients{% endblock %}
+
+{% block content %}
+
     <h1>Clients</h1>
 
     <table border="1">
@@ -31,5 +30,4 @@
         </tr>
         {% endfor %}
     </table>
-</body>
-</html>
+{% endblock %}
