--- a/templates/projects/project_list.html
+++ b/templates/projects/project_list.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Projects</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Projects{% endblock %}
+
+{% block content %}
+
     <h1>Projects</h1>
 
     <table border="1">
@@ -41,5 +40,4 @@
     </table>
 
     <p><a href="{% url 'client_list' %}">← Back to clients</a></p>
-</body>
-</html>
+{% endblock %}
