--- a/templates/clients/client_list.html
+++ b/templates/clients/client_list.html
@@ -6,6 +6,10 @@
 
     <h1>Clients</h1>
 
+ <p>
+        <a href="{% url 'client_create' %}">+ New client</a>
+    </p>
+
     <table border="1">
         <tr>
             <th>Name</th>
