add url path to project form to url.py and add url for button to new project in project_list.html.py

--- a/templates/projects/project_list.html
+++ b/templates/projects/project_list.html
@@ -6,6 +6,9 @@
 
     <h1>Projects</h1>
 
+<p>
+    <a href="{% url 'project_create' %}">+ New project</a>
+</p>
     <table border="1">
         <tr>
             <th>Title</th>
