update client_detail.html by adding url 'project_create_for_client'

--- a/templates/clients/client_detail.html
+++ b/templates/clients/client_detail.html
@@ -30,6 +30,11 @@
     {% endif %}
 
     <h2>Projects</h2>
+<p>
+    <a href="{% url 'project_create_for_client' client.pk %}">
+        + Add project for this client
+    </a>
+</p>
     {% if projects %}
         <ul>
         {% for project in projects %}
