--- a/templates/projects/project_form.html
+++ b/templates/projects/project_form.html
@@ -1,14 +1,25 @@
 {% extends "base.html" %}
 
-{% block title %}New Project{% endblock %}
+{% block title %}
+    {% if form.instance.pk %}
+        Edit Project
+    {% else %}
+        New Project
+    {% endif %}
+{% endblock %}
 
 {% block content %}
-    <h2>New Project</h2>
+    <h2>
+        {% if form.instance.pk %}
+            Edit Project
+        {% else %}
+            New Project
+        {% endif %}
+    </h2>
 
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-
         <button type="submit">Save</button>
     </form>
 
