add description field for project to client_detail.html

--- a/templates/clients/client_detail.html
+++ b/templates/clients/client_detail.html
@@ -48,6 +48,13 @@
                 {% if project.budget %}
                     – Budget: {{ project.budget }}
                 {% endif %}
+
+                 {% if project.description %}
+                <br>
+                <em>{{ project.description }}</em>
+            {% endif %}
+
+
             </li>
         {% endfor %}
         </ul>
