update path url and url in base.html for home page

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Freelancer CRM</h1>
+        <h1><a href="{% url 'home' %}">Freelancer CRM</a></h1>
         <nav>
             <a href="{% url 'client_list' %}">Clients</a> |
             <a href="{% url 'project_list' %}">Projects</a>
