--- a/templates/clients/client_list.html
+++ b/templates/clients/client_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Clients{% endblock %}
 
@@ -43,7 +44,7 @@
         <tr>
             <th>Name</th>
             <th>Company</th>
-            <th>Country</th>
+            <th>Country ❤</th>
             <th>Status</th>
             <th>Email</th>
         </tr>
@@ -77,4 +78,9 @@
         </tr>
         {% endfor %}
     </table>
+{% endblock %}
+
+{% block extra_js %}
+    <script src="{% static 'js/client_filters.js' %}"></script>
+
 {% endblock %}
