--- a/templates/clients/client_form.html
+++ b/templates/clients/client_form.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}
 
     {% if form.instance.pk %}
@@ -18,12 +20,12 @@
         {% endif %}
     </h2>
 
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
+  <form method="post" class="mt-3">
+    {% csrf_token %}
+    {{ form|crispy }}
 
-        <button type="submit">Save</button>
-    </form>
+    <button type="submit" class="btn btn-primary">Save</button>
+</form>
 
     <p>
         <a href="{% url 'client_list' %}">← Back to clients</a>
