--- a/templates/projects/project_form.html
+++ b/templates/projects/project_form.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}
     {% if form.instance.pk %}
         Edit Project
@@ -19,7 +21,7 @@
 
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+         {{ form|crispy }}
         <button type="submit">Save</button>
     </form>
 
