update client_form.html - change to full title

--- a/templates/clients/client_form.html
+++ b/templates/clients/client_form.html
@@ -5,9 +5,9 @@
 {% block title %}
 
     {% if form.instance.pk %}
-        Edit Client
+        Edit client – Clients &amp; Projects
     {% else %}
-        New Client
+        New client – Clients &amp; Projects
     {% endif %}
 {% endblock %}
 
