update project_form.html - change to full title

--- a/templates/projects/project_form.html
+++ b/templates/projects/project_form.html
@@ -4,7 +4,7 @@
 
 {% block title %}
     {% if form.instance.pk %}
-        Edit Project
+        Edit project – Clients &amp; Projects
     {% else %}
         New Project
     {% endif %}
