--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,7 @@
                 <a href="{% url 'logout' %}">Logout</a>
             {% else %}
                 <a href="{% url 'login' %}">Login</a>
+                <a href="{% url 'signup' %}">Sign up</a>
             {% endif %}
         </div>
 
