--- a/templates/projects/project_list.html
+++ b/templates/projects/project_list.html
@@ -41,7 +41,14 @@
         </tr>
         {% for project in projects %}
         <tr>
-            <td>{{ project.title }}</td>
+
+            <td>
+            {{ project.title }}<br>
+            {% if project.summary %}
+                <span class="project-summary-label">AI summary:</span>
+                <span class="project-summary">{{ project.summary }}</span>
+            {% endif %}
+        </td>
             <td>
                 <a href="{% url 'client_detail' project.client.pk %}">
                     {{ project.client.name }}
